--- a/views/instructor/addCourse.ejs
+++ b/views/instructor/addCourse.ejs
@@ -127,18 +127,18 @@
             <label for="shortDescription">Short description</label>
             <textarea class="form-control" id="shortDescription" rows="3" name="shortDescription"></textarea>
         </div>
-        <div class="form-group">
+        <!-- <div class="form-group">
             <label for="fullDescription">Full description</label>
             <textarea class="form-control" id="fullDescription" rows="3" name = "fullDescription"></textarea>
-          </div>
+        </div> -->
           <div class="form-group">
               <label for="price">Price</label>
               <input type="number" class="form-control" id="price" placeholder="699" name = "price">
           </div>
-          <div class="form-group">
+        <!-- <div class="form-group">
             <label for="concurency">Concurency</label>
             <input type="text" class="form-control" id="concurency" placeholder="USD" name="concurency">
-        </div>
+        </div> -->
 
 
         <input type="submit" class="btn btn-primary" value="Submit this course"/>
