--- a/views/instructor/addLesson.ejs
+++ b/views/instructor/addLesson.ejs
@@ -111,7 +111,7 @@
     </nav>
 
 
-
+    <!-- add Lesson -->
     <div id="addLesson" class="container mt-5 mb-5"> 
       <form action="/instructor/addLesson?chapter_id=<%=chapter_id%>" method="post" id="formLesson">
         <div class="form-group">
