--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -102,7 +102,9 @@
   <!-- Main content -->
   <div class="container">
     <div>Profile</div>
-    
+    <div class="row">
+      
+    </div>
   </div>
   <hr>
   <!-- Before footer -->
