--- a/views/user/course.ejs
+++ b/views/user/course.ejs
@@ -99,7 +99,7 @@
       </div>
     </div>
   </nav>
-  
+
   <div class="container mt-2">
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
@@ -135,14 +135,14 @@
               <i class="far fa-star"></i>
             <% } %>
             <div class="course-number d-inline ml-2">
-              (<%= payload.rating_number ? payload.rating_number : 0 %> ratings) <span class="ml-2"><%= payload.enroll_number ? payload.enroll_number : 0 %> students</span> 
+              (<%= payload.rating_number ? payload.rating_number : 0 %> ratings) <span class="ml-2"><%= payload.enroll_number ? payload.enroll_number : 0 %> students</span>
             </div>
           </div>
-    
+
           <div class="course-lectures mt-2">
             Create by: <span><%= payload.Instructor.User.first_name %> <%= payload.Instructor.User.last_name %></span>
           </div>
-    
+
           <div class="course-update">
             <i class="fas fa-edit"></i> Last update: <%= payload.updated_at %>
           </div>
@@ -239,7 +239,7 @@
                   <div class="col-2">
                     <%= item.price %> <%= item.concurrency %>
                   </div>
-                  
+
                 </div>
                 <hr>
               </a>
@@ -334,7 +334,7 @@
               </div>
               <hr>
             <% }) %>
-            <% if(user) { %>
+            <% if(isOwn) { %>
               <div class="add-review">
                 <div class="text-center">
                   <div id="starCount" class="review-star">
@@ -356,7 +356,7 @@
       </div>
       <div id="scrollDiv" class="course-commerce">
         <!-- Button trigger modal -->
-        
+
         <div class="course-commerce-img">
           <img src="<%= payload.img_path %>" width="100%">
           <div class="d-flex justify-content-center">
@@ -387,7 +387,7 @@
         </div>
       </div>
     </div>
-    
+
   </div>
   <div class="modal fade" id="previewCourse">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -399,7 +399,7 @@
         <div class="modal-body">
           <video width="100%" src="http://www.sample-videos.com/video/mp4/720/big_buck_bunny_720p_1mb.mp4" controls type="video/mp4"></video>
         </div>
-      </div> 
+      </div>
     </div>
   </div>
 
@@ -421,7 +421,7 @@
           </div>
           <div class="d-flex justify-content-between">
             <div>
-              Coupon discounts: 
+              Coupon discounts:
             </div>
             <div>
               - 0 USD
@@ -451,7 +451,7 @@
         <li><img src="https://s.udemycdn.com/partner-logos/surveymonkey-logo.svg" alt=""></li>
         <li><img src="https://s.udemycdn.com/partner-logos/booking-logo.svg" alt=""></li>
       </ul>
-    </div>  
+    </div>
   </div>
   <hr>
   <div class="container-fluid footer">
@@ -479,7 +479,7 @@
       <ul class="col list-group">
         <li class="list-group"><a href="#">
           Terms</a></li>
-        <li class="list-group"><a href="#">           
+        <li class="list-group"><a href="#">
           Privacy policy and cookie policy</a></li>
         <li class="list-group"><a href="#">
           Sitemap</a></li>
@@ -509,7 +509,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-  
+
   <script>
     $(".add-review span").hide()
     $().ready(function(){
@@ -540,7 +540,7 @@
         $.post(`/student/buy`,
          {
            courses: courses.join("+")
-         }, 
+         },
          async function(data, status) {
           if(data.msg === "Buy success") {
             await Swal.fire({
